# wifipem

./: .gitignore  README.md  bump-version.sh  eduroam-tsinghua.pem  flake.nix  live-capture.sh  pyproject.toml  wifipem.py
