[tool.poetry]
name = "wifipem"
version = "2.0"
description = "Automated tool to extract the public key presented by WPA2-Enterprise wireless networks"
authors = ["Bryan Lai <bryanlais@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyshark = "^0.6"

[tool.poetry.scripts]
wifipem = 'wifipem:main'

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
